WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297849
[iOS] Text selection is lost immediately when long pressing on a PDF document in a web app
https://bugs.webkit.org/show_bug.cgi?id=297849
Summary
[iOS] Text selection is lost immediately when long pressing on a PDF document...
Abrar Rahman Protyasha
Reported
2025-08-25 01:38:04 PDT
rdar://157692157
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-25 01:38:13 PDT
<
rdar://problem/159088947
>
Abrar Rahman Protyasha
Comment 2
2025-08-25 01:38:51 PDT
rdar://157692157
Abrar Rahman Protyasha
Comment 3
2025-08-25 01:49:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49835
EWS
Comment 4
2025-08-25 11:16:32 PDT
Committed
299120@main
(c6e77058d1bc): <
https://commits.webkit.org/299120@main
> Reviewed commits have been landed. Closing PR #49835 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug